syntax = "proto3";

package calculator;

message SumRequest {
  int32 a = 1;
  int32 b = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
  int32 input_number = 1;
}

message PrimeNumberDecompositionResponse {
  int32 result = 1;
}

message ComputeAverageRequest {
  int64 number = 1;
}

message ComputeAverageResponse {
  double computed_average = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse){};
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){};
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){};
}